add error handle for user not found in update user's nickname
